#11265 closed defect (fixed)

Chroma Artifacts on the right edge of some odd width 4:2:0 videos in ffplay

Reported by: Michael Niedermayer Owned by: Niklas Haas
Priority: normal Component: undetermined
Version: unspecified Keywords: swscale, ffplay
Cc: Niklas Haas Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: yes

Description (last modified by Michael Niedermayer)

Summary of the bug:
How to reproduce:

./ffplay test25.nut
use the mouse to scale it up a bit to better see
and then repeatly press arrow left, each time on the right side a different
mix of colors appears

test25.nut is a mpeg4 yuv420p video with 25x25 size, infact codec and content seem not to matter

==1071990== Conditional jump or move depends on uninitialised value(s)
==1071990==    at 0x1324673: av_clip_uint8_c (common.h:208)
==1071990==    by 0x13260C3: yuv2plane1_8_c (output.c:426)
==1071990==    by 0x12FCC0D: lum_planar_vscale (vscale.c:53)
==1071990==    by 0x12F0E0A: swscale (swscale.c:498)
==1071990==    by 0x12F320A: scale_internal (swscale.c:1046)
==1071990==    by 0x12F239C: scale_cascaded (swscale.c:875)
==1071990==    by 0x12F27D4: scale_internal (swscale.c:937)
==1071990==    by 0x12F3BBD: ff_sws_slice_worker (swscale.c:1240)
==1071990==    by 0x13DC790: run_jobs (slicethread.c:65)
==1071990==    by 0x13DC866: thread_worker (slicethread.c:89)
==1071990==    by 0x694B608: start_thread (pthread_create.c:477)
==1071990==    by 0x6A85352: clone (clone.S:95)
==1071990==
==1071990== Thread 83:
==1071990== Conditional jump or move depends on uninitialised value(s)
==1071990==    at 0x1324673: av_clip_uint8_c (common.h:208)
==1071990==    by 0x132602D: yuv2planeX_8_c (output.c:416)
==1071990==    by 0x12FD038: chr_planar_vscale (vscale.c:100)
==1071990==    by 0x12F0E0A: swscale (swscale.c:498)
==1071990==    by 0x12F320A: scale_internal (swscale.c:1046)
==1071990==    by 0x12F239C: scale_cascaded (swscale.c:875)
==1071990==    by 0x12F27D4: scale_internal (swscale.c:937)
==1071990==    by 0x12F3BBD: ff_sws_slice_worker (swscale.c:1240)
==1071990==    by 0x13DC790: run_jobs (slicethread.c:65)
==1071990==    by 0x13DC866: thread_worker (slicethread.c:89)
==1071990==    by 0x694B608: start_thread (pthread_create.c:477)
==1071990==    by 0x6A85352: clone (clone.S:95)
==1071990==
==1071990== Conditional jump or move depends on uninitialised value(s)
==1071990==    at 0x1324673: av_clip_uint8_c (common.h:208)
==1071990==    by 0x132602D: yuv2planeX_8_c (output.c:416)
==1071990==    by 0x12FD09E: chr_planar_vscale (vscale.c:101)
==1071990==    by 0x12F0E0A: swscale (swscale.c:498)
==1071990==    by 0x12F320A: scale_internal (swscale.c:1046)
==1071990==    by 0x12F239C: scale_cascaded (swscale.c:875)
==1071990==    by 0x12F27D4: scale_internal (swscale.c:937)
==1071990==    by 0x12F3BBD: ff_sws_slice_worker (swscale.c:1240)
==1071990==    by 0x13DC790: run_jobs (slicethread.c:65)
==1071990==    by 0x13DC866: thread_worker (slicethread.c:89)
==1071990==    by 0x694B608: start_thread (pthread_create.c:477)
==1071990==    by 0x6A85352: clone (clone.S:95)

Regression since: c619d20906d039060efbeaa822daf8e949f3ef24

also -vf scale,format=rgb24 seems to avoid the issue

Attachments (1)

test25.nut (2.6 KB ) - added by Michael Niedermayer 22 months ago.

Download all attachments as: .zip

Change History (7)

by Michael Niedermayer, 22 months ago

Attachment: test25.nut added

comment:1 by Michael Niedermayer, 22 months ago

Description: modified (diff)
Owner: set to Niklas Haas
Status: newopen

comment:2 by Michael Niedermayer, 22 months ago

Cc: Niklas Haas added
Owner: changed from Niklas Haas to Niklas Haas

comment:3 by Balling, 22 months ago

You are saying it is a regression but IMHO a bug with uninitialised values cannot just happen due to SDL changes of defaults in ffplay especially since a) such a bug with -vf scale=in_color_matrix=auto,format=gbrp is still there

b) ffplay was even more broken before was it not?

comment:4 by Niklas Haas, 21 months ago

Analyzed by developer: set
Reproduced by developer: set

comment:6 by Niklas Haas, 21 months ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.